--- a/examples/navbars-offcanvas/index.html
+++ b/examples/navbars-offcanvas/index.html
@@ -148,12 +148,11 @@ extra_css:
       <div class="col-sm-8 py-5 mx-auto">
         <h1 class="display-5 fw-normal">Navbar with offcanvas examples</h1>
         <p class="fs-5">This example shows how responsive offcanvas menus work within the navbar. For positioning of
-          navbars, checkout the <a href="/examples/navbar-static.md">top</a> and <a href="{ { < docsref "/examples/navbar-fixed"
-          }}">fixed top</a> examples.</p>
+          navbars, checkout the <a href="../navbar-static.md">top</a> and <a href="../navbar-fixed/index.html">fixed top</a> examples.</p>
         <p>From the top down, you'll see a dark navbar, light navbar and a responsive navbar—each with offcanvases built
           in. Resize your browser window to the large breakpoint to see the toggle for the offcanvas.</p>
         <p>
-          <a class="btn btn-primary" href="/components/navbar#offcanvas.md" role="button">Learn more
+          <a class="btn btn-primary" href="../../components/navbar.md#offcanvas.md" role="button">Learn more
           about offcanvas navbars &raquo;</a>
         </p>
       </div>
