Translate file site/content/docs/5.3/getting-started/vite.md
Issue: GH-33

--- a/examples/starter-template/index.html
+++ b/examples/starter-template/index.html
@@ -86,7 +86,7 @@ title: Starter Template
         <p>Read more detailed instructions and documentation on using or contributing to Bootstrap.</p>
         <ul class="list-unstyled ps-0">
           <li>
-            <a class="icon-link mb-1" href="/getting-started/introduction.md">
+            <a class="icon-link mb-1" href="/comecando/introducao.md">
             <svg aria-hidden="true" class="bi" height="16" width="16">
               <use xlink:href="#arrow-right-circle"/>
             </svg>
@@ -94,7 +94,7 @@ title: Starter Template
             </a>
           </li>
           <li>
-            <a class="icon-link mb-1" href="/getting-started/webpack.md">
+            <a class="icon-link mb-1" href="/comecando/webpack.md">
             <svg aria-hidden="true" class="bi" height="16" width="16">
               <use xlink:href="#arrow-right-circle"/>
             </svg>
@@ -102,7 +102,7 @@ title: Starter Template
             </a>
           </li>
           <li>
-            <a class="icon-link mb-1" href="/getting-started/parcel.md">
+            <a class="icon-link mb-1" href="/comecando/parcel.md">
             <svg aria-hidden="true" class="bi" height="16" width="16">
               <use xlink:href="#arrow-right-circle"/>
             </svg>
@@ -110,7 +110,7 @@ title: Starter Template
             </a>
           </li>
           <li>
-            <a class="icon-link mb-1" href="/getting-started/vite.md">
+            <a class="icon-link mb-1" href="/comecando/vite.md">
             <svg aria-hidden="true" class="bi" height="16" width="16">
               <use xlink:href="#arrow-right-circle"/>
             </svg>
